# c-respawner-demo

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  Makefile  README.md  c-respawner-demo.spec
debian/: README  changelog  control  copyright  files  rules
debian/source/: options
include/: CMakeLists.txt  config.h.in
src/: CMakeLists.txt  conf.c  conf.h  onsig-behaviour.c  onsig-behaviour.h  pidfile.c  pidfile.h  respawner.c
src/utils/: CMakeLists.txt  exec.c  exec.h  proc.c  proc.h  signal.c  signal.h  timer.c  timer.h
test/: CMakeLists.txt  forever.sh  lighttpd.sh  single.sh
test/functional/: CMakeLists.txt  forever.test.sh
test/mock/: forever.sh  single.sh  subshell.sh
test/unit/: CMakeLists.txt  utils-proc.test.c
test/valgrind/: memleak.test.sh
